[package]
name = "category5"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thundr={path="thundr"}
# As of wayland-rs v0.30 we specify the system library feature
# for the wayland-backend crate and all others will inherit it
wayland-backend={path="../wayland-rs/wayland-backend/", features=["server_system", "dlopen"]}
wayland-server={path="../wayland-rs/wayland-server/"}
wayland-scanner={path="../wayland-rs/wayland-scanner/"}
wayland-protocols={path="../wayland-rs/wayland-protocols/", features=["server", "unstable"]}
wayland-sys={path="../wayland-rs/wayland-sys/"}
input={version="0.7.1", features=["gen"]}
udev="0.6"
libc="0.2"
image="0.23.14"
nix="0.24"
bitflags="1.3.2"
xkbcommon="0.4"
atmos_gen={path="atmos_gen"}
utils={path="utils"}
lazy_static="1.4"

renderdoc={version="0.10", optional=true}

[features]
aftermath = ["thundr/aftermath"]
renderdoc = ["dep:renderdoc"]
