[package]
name = "category5"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thundr={path="thundr"}
# As of wayland-rs v0.30 we specify the system library feature
# for the wayland-backend crate and all others will inherit it
wayland-backend={version="0.1.1", features=["server_system", "dlopen"]}
wayland-server="0.30"
wayland-scanner="0.30"
wayland-protocols={version="0.30", features=["server", "unstable"]}
wayland-sys="0.30"
input={version="0.7.1", features=["gen"]}
udev="0.7"
libc="0.2"
image="0.23.14"
nix="0.26"
bitflags="1.3.2"
xkbcommon="0.5"
atmos_gen={path="atmos_gen"}
utils={path="utils"}
lazy_static="1.4"

renderdoc={version="0.10", optional=true}

[features]
aftermath = ["thundr/aftermath"]
renderdoc = ["dep:renderdoc"]
