[package]
name = "category5"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dakota={path="dakota", features=["direct2display", "drm"]}
lluvia={path="lluvia"}
# As of wayland-rs v0.30 we specify the system library feature
# for the wayland-backend crate and all others will inherit it
wayland-backend={version="0.3.2", features=["server_system", "dlopen"]}
wayland-server="0.31"
wayland-scanner="0.31"
wayland-protocols={version="0.31", features=["server", "unstable"]}
wayland-sys="0.31"
libc="0.2"
image="0.23.14"
nix= { version="0.29", features=["mman"] }
bitflags="1.3.2"
xkbcommon="0.5"
utils={path="utils"}
lazy_static="1.4"
chrono="0.4"
paste="1.0"

renderdoc={version="0.10", optional=true}

[features]
aftermath = ["dakota/aftermath"]
renderdoc = ["dep:renderdoc"]

[profile.release]
lto = "thin"
