[package]
name = "dakota-test"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dakota={path="../dakota"}
utils={path="../utils"}

renderdoc={version="0.10", optional=true}

[features]
renderdoc=["dep:renderdoc"]
direct2display=["dakota/direct2display"]
aftermath=["dakota/aftermath"]

[profile.release-with-debug]
inherits = "release"
debug = true
