[package]
name = "dakota"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lluvia={path="../lluvia"}
utils={path="../utils"}
thundr={path="../thundr"}
wayc={path="../wayc", optional=true}
quick-xml = {version = "0.23"}
image="0.23.14"
sdl2={ version="0.35", optional=true }
lazy_static="1.4"
bitflags = "1.3"
regex = "1.5.5"
# TODO: update harfbuzz freetype requirement
# These need to match in the freetype-sys version they use
freetype-rs = "0.26"
harfbuzz-sys = "0.5"
harfbuzz_rs = "2.0"
# for generating names in macros
paste = "1.0"

[features]
wayland=["thundr/wayland", "wayc"]
sdl=["thundr/sdl", "sdl2"]
