[package]
name = "dakota"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lluvia={path="../lluvia"}
utils={path="../utils"}
thundr={path="../thundr"}
quick-xml = {version = "0.23"}
image="0.23.14"
lazy_static="1.4"
bitflags = "1.3"
regex = "1.5.5"
# TODO: update harfbuzz freetype requirement
# These need to match in the freetype-sys version they use
freetype-rs = "0.26"
harfbuzz-sys = "0.5"
harfbuzz_rs = "2.0"
# for generating names in macros
paste = "1.0"
# needed for enums from ints :(
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"

sdl2={ version="0.35", optional=true }
sdl2-sys={ version="0.35", optional=true }
input={version="0.8.2", features=["gen"], optional=true}

xkbcommon={version="0.5", optional=true}

# We have two presentation backends: SDL2 for running on window
# systems, and running direct2display without a window server present.
# You probably just want the default SDL2 backend.
[features]
default=["sdl"]
sdl=["thundr/sdl", "sdl2", "sdl2-sys", "xkbcommon"]
direct2display=["input", "xkbcommon"]
