[package]
name = "lluvia"
version = "0.0.2"
edition = "2021"
authors = ["Austin Shafer <ashafer@badland.io>"]
description = "A stripped down Entity Component System that allows for no-nonsense data storage in finite time."
readme = "Readme.md"
license = "MIT OR BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
