[package]
name = "text-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thundr={path="../thundr", features=["sdl"]}
fontdue = "0.7.2"
rustybuzz = "0.4.0"
unicode-linebreak = "0.1.2"
utils={path="../utils"}
image="0.23"
sdl2="0.35"

