[package]
name = "text-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thundr={path="../thundr", features=["sdl"]}
# TODO: update harfbuzz freetype requirement
# These need to match in the freetype-sys version they use
freetype-rs = "0.26"
harfbuzz-sys = "0.5"
harfbuzz_rs = "2.0"
unicode-linebreak = "0.1.2"
utils={path="../utils"}
image="0.23"
sdl2="0.35"

