[package]
name = "thundr-test"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thundr={path="../thundr"}
utils={path="../utils"}
image="0.23"
sdl2={version="", optional=true}

[features]
sdl=["sdl2", "thundr/sdl"]
