[package]
name = "thundr"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils={path="../utils"}
ash="0.33"
bitflags=""
cgmath="0.17"
memoffset="0.5"
serde = { version="1.0", features=["derive"] }
bincode="1.2.1"
nix="0.17"
anyhow=""
thiserror=""

# The following are only for the window system features
winit={version = "0.24", optional = true }
raw-window-handle={version = "", optional = true }
raw-window-metal={version = "", optional = true }
wayland-client={features=["use_system_lib"], optional = true}

[features]
xcb = ["winit"]
macos = ["winit", "raw-window-metal", "raw-window-handle"]
wayland = ["wayland-client"]

# these deps are for the tests only
[dev-dependencies]
image=""
