[package]
name = "thundr"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1.4"
utils={path="../utils"}
ash="0.33"
bitflags="1.3"
cgmath="0.17"
memoffset="0.5"
serde = { version="1.0", features=["derive"] }
bincode="1.2.1"
nix="0.17"
anyhow="1.0"
thiserror="1.0"

# The following are only for the window system features
sdl2={ version="0.35", optional=true }
wayland-client={ version="0.29", optional=true }

[features]
sdl=["sdl2"]
wayland = ["wayland-client"]

# these deps are for the tests only
[dev-dependencies]
image="0.23.14"
