[package]
name = "thundr"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1.4"
lluvia={path="../lluvia"}
utils={path="../utils"}
ash={version="0.37", features=["linked"]}
bitflags="1.3"
cgmath="0.17"
serde = { version="1.0", features=["derive"] }
bincode="1.2.1"
nix= { version="0.29", features=["fs"] }
anyhow="1.0"
thiserror="1.0"

# The following are only for the window system features
sdl2 = { version="0.35", optional=true }
wayland-client = { version="0.29", optional=true }

nvidia-aftermath-rs = { version="0.0.3", optional = true }
drm = { version="0.14.1", optional=true }
drm-ffi = { version="0.9.0", optional=true }
gbm = { version="0.16.0", optional=true, features=["drm-support"] }

[features]
aftermath = ["nvidia-aftermath-rs"]
sdl = ["sdl2"]
wayland = ["wayland-client"]
drm = ["dep:drm", "drm-ffi", "gbm"]

# these deps are for the tests only
[dev-dependencies]
image = "0.23.14"
