[package]
name = "utils"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix= { version="0.29", features=["event", "poll"] }
anyhow="1.0"
lazy_static="1.4"
