[package]
name = "vulkan"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit="0.19.5"
ash= { git = "https://github.com/MaikKlein/ash" }
cgmath="0.17"
obj-rs="0.5"
memoffset="0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc="0.2.6"
metal="0.16"
cocoa="0.20"

# Here we can declare our own conditional compliation features
[features]
default = []

# The default option represents running as the root compositor on freebsd
# i.e. When running in a bare terminal without x11
#
# The x11 feature meants we should use an x11 surface instead of a
# khr display surface
x11 = []