[package]
name = "vulkan"
version = "0.1.0"
authors = ["Austin Shafer <ashafer@badland.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash= { git = "https://github.com/MaikKlein/ash" }
cgmath="0.17"
obj-rs="0.5"
memoffset="0.5"
image="0.23"
serde = { version = "1.0", features = ["derive"] }
bincode="1.2.1"

# Here we can declare our own conditional compliation features
[features]
default = []

# The default option represents running as the root compositor on freebsd
# i.e. When running in a bare terminal without x11
#
# The x11 feature meants we should use an x11 surface instead of a
# khr display surface
x11 = []